force-app/main/default/objects/Travel_Booking__c/Travel_Booking__c.object-meta.xml
<CustomObject>
    <label>Travel Booking</label>
    <nameField>
        <displayFormat>BKNG-{000000000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>