force-app/main/default/objects/Travel_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer who made the booking</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Travel Bookings</relationshipLabel>
    <relationshipName>Travel_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>