force-app/main/default/objects/Travel_Booking__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <label>NPS Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>