force-app/main/default/objects/Travel_Booking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Originating sales Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Travel Bookings</relationshipLabel>
    <relationshipName>Travel_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>