force-app/main/default/objects/Travel_Booking__c/fields/Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Invitation</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipLabel>Travel Bookings</relationshipLabel>
    <relationshipName>Travel_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>