force-app/main/default/objects/Travel_Booking__c/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the invitation is sent it will be automatically marked as true</description>
    <label>Survey Sent</label>
    <type>Checkbox</type>
</CustomField>