force-app/main/default/objects/Travel_Booking__c/fields/Tour_Package__c.field-meta.xml
<CustomField>
    <fullName>Tour_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tour Package</label>
    <referenceTo>Tour_Package__c</referenceTo>
    <relationshipLabel>Travel Bookings</relationshipLabel>
    <relationshipName>Travel_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>